// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinancialRiskResults renders results 1`] = `
<section>
  <div
    className="mock"
  >
    Personality Score Bar
  </div>
  <div
    className="mock"
  >
    Personality Archetype
  </div>
  <div
    className="mock"
  >
    Personality Details
  </div>
</section>
`;

exports[`FinancialRiskResults renders results for third person 1`] = `
<section>
  <div
    className="mock"
  >
    Personality Score Bar
  </div>
  <div
    className="mock"
  >
    Personality Archetype
  </div>
  <div
    className="mock"
  >
    Personality Details
  </div>
  <div
    className="mock"
  >
    Personality Takeaways
  </div>
  <div
    className="mock"
  >
    Personality Dimensions
  </div>
</section>
`;
